@@ -154,6 +154,12 @@ CVS code -
 	  current_x to current_x_save, only turn the mark off and call
 	  edit_refresh() if the mark was originally on, and make
 	  length_change a ssize_t. (DLR)
+	- If the mark is on when we start, skip over all matches not
+	  found inside the marked text.  This makes marked spell
+	  checking when using the internal spell checker work as
+	  expected (found by Rocco Corsi), and also allows replacing
+	  only marked text when the mark is on (suggested by Joseph
+	  Birthisel). (DLR)
   findnextstr()
 	- Take the no_sameline parameter after can_display_wrap and
 	  wholewords, not after all other parameters. (DLR)
